# skos

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/capauth/: app.yaml
apps/skmemory/: app.yaml
docs/: ARCHITECTURE.md  CAPABILITIES.md  CLAUDE-CODE-GTD-CONVENTION.md  SECRET-MIGRATION.md  gtd-ingest-SOP.md  gtd-ingest-architecture.md  gtd-ingest-order-tracking-design.md  model-registry.md  skos-autopilot-SOP.md  skos-autopilot-architecture.md
scripts/: README.md  gtd-triage.sh  sk-cron-run.sh
tests/: conftest.py  test_adapter.py  test_adapter_base.py  test_adapter_codex.py  test_adapter_opencode.py  test_adapter_pi.py  test_adapters.py  test_autopilot_build_executors.py  test_autopilot_ci.py  test_autopilot_claude_code.py  test_autopilot_config.py  test_autopilot_config_harness.py  test_autopilot_config_wrap.py  test_autopilot_digest.py  test_autopilot_digest_send.py  test_autopilot_e2e_dryrun.py  test_autopilot_engineering.py  test_autopilot_executor.py  test_autopilot_firewall_segments.py  test_autopilot_harness.py  test_autopilot_job_yaml.py  test_autopilot_journal.py  test_autopilot_journal_api.py  test_autopilot_orchestrator.py  test_autopilot_queue_decision.py  test_autopilot_resolver.py  test_autopilot_revert_wrap.py  test_autopilot_stubs.py  test_autopilot_types.py  test_autopilot_workitem_enrichment.py  test_brain_canon.py  test_brain_cli.py  test_brain_entity.py  test_brain_index.py  test_capability.py  test_capability_autopilot.py  test_cli.py  test_cli_autopilot.py  test_cli_capability.py  test_cli_install.py  (+42 more)
(+86 files in other folders)
