[project]
name = "skos"
version = "0.1.0"
description = "skos — sovereign agent OS: filesystem & packaging foundation"
requires-python = ">=3.12"
dependencies = ["typer>=0.12", "pydantic>=2.7", "pyyaml>=6.0", "cryptography>=42"]

[project.scripts]
skos = "skos.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
